# FlowMatchingLearning

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: ARCHITECTURE.md  __init__.py
backend/app/: __init__.py  compute_boundaries.py  logging_utils.py  models.py
backend/app/api/: __init__.py  app.py  (+4 more)
backend/config/: hyperparameters.json
backend/contracts/: README.md  chunking_result.json  embedding_batch_result.json  graph_data.json  phase_a_ingestion_result.json  rolling_state.json  section_parse_result.json  toc.json  transcription_result.json  vision_extraction_result.json
backend/docs/: ACTIAN_SETUP.md  HYPERPARAMETERS.md
backend/modal/: __init__.py  embedding_service.py  transcription_service.py  vision_extraction_service.py
backend/tools/: __init__.py  export_contract_schemas.py  preflight.py  run_api.py  run_full_pipeline.py  run_phase_a.py  run_phase_b_graph.py  run_phase_b_toc.py
frontend/: package-lock.json  package.json
frontend/public/: graph_data.json
frontend/src/: App.css  App.tsx  graphUtils.ts  index.css  layout.ts  types.ts
tests/: README.md
tests/unit/: test_actian_cortex_store.py  test_api_app.py  test_api_job_store.py  test_api_orchestrator.py  test_chunking.py  test_compute_boundaries.py  test_env_loader.py  test_hyperparameters.py  test_phase_a_pipeline.py  test_phase_b_graph_pipeline.py  test_phase_b_toc_pipeline.py  test_preflight.py  test_provider_locked_models.py  test_run_full_pipeline.py  test_run_phase_a.py  test_run_phase_b_graph.py  test_run_phase_b_toc.py  test_section_reasoning.py  test_toc_reasoning.py
(+18 files in other folders)
